// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageGrid/> component : display <ImageGrid/> component  when gifArr have list 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .css-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.css-1 {
  display: block;
  overflow-y: auto;
  list-style: none;
  padding: 0;
  -webkit-overflow-scrolling: touch;
  overflow-y: auto;
}

.css-2 {
  display: inline-block;
  position: relative;
  line-height: 0;
  margin: 0px;
  padding: 0px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  line-height: 0;
}

.css-2 .MuiImageListItem-img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.css-3 {
  height: 50px;
}

<body>
    <div>
      <div
        class="css-0"
      >
        <ul
          class="MuiImageList-root MuiImageList-masonry css-1"
          style="column-count: 3; column-gap: 8px;"
        >
          <button
            class="MuiImageListItem-root MuiImageListItem-masonry css-2"
            style="height: auto; margin-bottom: 8px;"
          >
            <img
              alt="Will Smith Yes GIF by Bad Boys For Life"
              class="MuiImageListItem-img"
              src="https://media4.giphy.com/media/YOvOkaS5ZKfimDIgwJ/200w_d.gif?cid=e0fc1889ila69xrbm6kvpj1jlybb6ekm6rlldv3rgul4jvxn&rid=200w_d.gif&ct=g"
            />
          </button>
        </ul>
        <div
          class="MuiBox-root css-3"
        />
      </div>
    </div>
  </body>,
  "container": .css-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.css-1 {
  display: block;
  overflow-y: auto;
  list-style: none;
  padding: 0;
  -webkit-overflow-scrolling: touch;
  overflow-y: auto;
}

.css-2 {
  display: inline-block;
  position: relative;
  line-height: 0;
  margin: 0px;
  padding: 0px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  line-height: 0;
}

.css-2 .MuiImageListItem-img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.css-3 {
  height: 50px;
}

<div>
    <div
      class="css-0"
    >
      <ul
        class="MuiImageList-root MuiImageList-masonry css-1"
        style="column-count: 3; column-gap: 8px;"
      >
        <button
          class="MuiImageListItem-root MuiImageListItem-masonry css-2"
          style="height: auto; margin-bottom: 8px;"
        >
          <img
            alt="Will Smith Yes GIF by Bad Boys For Life"
            class="MuiImageListItem-img"
            src="https://media4.giphy.com/media/YOvOkaS5ZKfimDIgwJ/200w_d.gif?cid=e0fc1889ila69xrbm6kvpj1jlybb6ekm6rlldv3rgul4jvxn&rid=200w_d.gif&ct=g"
          />
        </button>
      </ul>
      <div
        class="MuiBox-root css-3"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<ImageGrid/> component : display <ImageGrid/> component  when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": @keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dasharray: 1px,200px;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 100px,200px;
    stroke-dashoffset: -15px;
  }

  100% {
    stroke-dasharray: 100px,200px;
    stroke-dashoffset: -125px;
  }
}

.css-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.css-1 {
  display: block;
  overflow-y: auto;
  list-style: none;
  padding: 0;
  -webkit-overflow-scrolling: touch;
  overflow-y: auto;
}

.css-2 {
  display: inline-block;
  position: relative;
  line-height: 0;
  margin: 0px;
  padding: 0px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  line-height: 0;
}

.css-2 .MuiImageListItem-img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.css-3 {
  height: 50px;
}

.css-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.css-5 {
  display: inline-block;
  color: #1976d2;
  -webkit-animation: animation-0 1.4s linear infinite;
  animation: animation-0 1.4s linear infinite;
}

.css-6 {
  display: block;
}

.css-7 {
  stroke: currentColor;
  stroke-dasharray: 80px,200px;
  stroke-dashoffset: 0;
  -webkit-animation: animation-1 1.4s ease-in-out infinite;
  animation: animation-1 1.4s ease-in-out infinite;
}

<body>
    <div>
      <div
        class="css-0"
      >
        <ul
          class="MuiImageList-root MuiImageList-masonry css-1"
          style="column-count: 3; column-gap: 8px;"
        >
          <button
            class="MuiImageListItem-root MuiImageListItem-masonry css-2"
            style="height: auto; margin-bottom: 8px;"
          >
            <img
              alt="Will Smith Yes GIF by Bad Boys For Life"
              class="MuiImageListItem-img"
              src="https://media4.giphy.com/media/YOvOkaS5ZKfimDIgwJ/200w_d.gif?cid=e0fc1889ila69xrbm6kvpj1jlybb6ekm6rlldv3rgul4jvxn&rid=200w_d.gif&ct=g"
            />
          </button>
        </ul>
        <div
          class="MuiBox-root css-3"
        >
          <div
            class="MuiBox-root css-4"
          >
            <span
              class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-5"
              role="progressbar"
              style="width: 30px; height: 30px;"
            >
              <svg
                class="MuiCircularProgress-svg css-6"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-7"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="20.2"
                  stroke-width="3.6"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": @keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dasharray: 1px,200px;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 100px,200px;
    stroke-dashoffset: -15px;
  }

  100% {
    stroke-dasharray: 100px,200px;
    stroke-dashoffset: -125px;
  }
}

.css-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.css-1 {
  display: block;
  overflow-y: auto;
  list-style: none;
  padding: 0;
  -webkit-overflow-scrolling: touch;
  overflow-y: auto;
}

.css-2 {
  display: inline-block;
  position: relative;
  line-height: 0;
  margin: 0px;
  padding: 0px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  line-height: 0;
}

.css-2 .MuiImageListItem-img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.css-3 {
  height: 50px;
}

.css-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.css-5 {
  display: inline-block;
  color: #1976d2;
  -webkit-animation: animation-0 1.4s linear infinite;
  animation: animation-0 1.4s linear infinite;
}

.css-6 {
  display: block;
}

.css-7 {
  stroke: currentColor;
  stroke-dasharray: 80px,200px;
  stroke-dashoffset: 0;
  -webkit-animation: animation-1 1.4s ease-in-out infinite;
  animation: animation-1 1.4s ease-in-out infinite;
}

<div>
    <div
      class="css-0"
    >
      <ul
        class="MuiImageList-root MuiImageList-masonry css-1"
        style="column-count: 3; column-gap: 8px;"
      >
        <button
          class="MuiImageListItem-root MuiImageListItem-masonry css-2"
          style="height: auto; margin-bottom: 8px;"
        >
          <img
            alt="Will Smith Yes GIF by Bad Boys For Life"
            class="MuiImageListItem-img"
            src="https://media4.giphy.com/media/YOvOkaS5ZKfimDIgwJ/200w_d.gif?cid=e0fc1889ila69xrbm6kvpj1jlybb6ekm6rlldv3rgul4jvxn&rid=200w_d.gif&ct=g"
          />
        </button>
      </ul>
      <div
        class="MuiBox-root css-3"
      >
        <div
          class="MuiBox-root css-4"
        >
          <span
            class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-5"
            role="progressbar"
            style="width: 30px; height: 30px;"
          >
            <svg
              class="MuiCircularProgress-svg css-6"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-7"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<ImageGrid/> component : display <ImageGrid/> component when gifArr undefined 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .css-0 {
  margin: 16px;
}

<body>
    <div>
      <div
        class="MuiBox-root css-0"
      >
        <p>
          No gifs were found
        </p>
      </div>
    </div>
  </body>,
  "container": .css-0 {
  margin: 16px;
}

<div>
    <div
      class="MuiBox-root css-0"
    >
      <p>
        No gifs were found
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
